--- a/style.css
+++ b/style.css
@@ -1,66 +1,97 @@
+* {
+  position: relative;
+}
+
 html, body {
-  margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  margin: 0;
+}
+
+body {
+  overflow-X: hidden;
 }
 
 .banner {
-  position: relative;
-  max-width: 850px;
-  left: 50%;
-  transform: translateX(-50%);
+  height: 100vh;
+  overflow: hidden;
+  font-size: 0;
+  border: solid 10px #eee;
 }
-.banner img.logo {
-  width: 850px;
+.banner #banner_img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.banner #banner1 {
+  width: 100%;
+  min-width: 1015px;
+}
+.banner #banner2 {
+  width: 100%;
+  min-width: 1015px;
+  top: -1px;
+  transform: rotate(180deg) scaleX(-1);
 }
 
 .walker {
-  width: 500vw;
+  height: 200vh;
 }
-
-.slider {
+.walker .container {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-image: url("assets/milkshop_background.png");
+  background-size: cover;
+  background-position: bottom;
+  height: 100vh;
+}
+.walker .container .menu {
   display: flex;
+  width: max-content;
+  left: 0;
 }
-
-.slide {
-  height: 300px;
-  width: 300px;
-  display: inline;
-  float: left;
+.walker .container .menu .drink {
+  padding: 10px 60px;
+  padding-bottom: 0px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: solid 1px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  box-shadow: 25px 25px 15px -20px rgba(0, 0, 0, 0.2);
   text-align: center;
+  margin-right: 40px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 40px;
 }
-.slide img {
-  height: 80%;
+.walker .container .menu .drink img {
+  width: 180px;
 }
-.slide p {
-  position: relative;
+.walker .container .menu .drink p.name {
+  margin: 0;
+  max-width: 180px;
   font-size: 25px;
-  bottom: 30px;
   font-weight: bold;
-  letter-spacing: 2px;
-  color: #4f7d25;
+  color: #45522f;
+}
+.walker .container .menu .drink p.description {
+  max-width: 180px;
+  font-size: 12px;
+  color: #555;
+  font-weight: 600;
+  text-align: left;
+  line-height: 20px;
 }
 
-.slider .slide:nth-child(2n+1) {
-  background-color: #ddd;
-}
-.slider .slide:nth-child(2n) {
+footer {
+  text-align: center;
+  height: 100vh;
   background-color: #eee;
 }
-
-.footer {
-  background-color: #eee;
-  position: relative;
-  height: 600px;
-}
-.footer img {
+footer #footer {
   position: absolute;
-  left: 50%;
   top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   width: 200px;
-}
-
-.sticky {
-  position: sticky;
 }
